# HLS-Segmenter

./: .gitignore  CMakeLists.txt  README.md  avconv_adapted_code.c  debugs.c  helpers.c  id3handling.c  options_parsing.c  segmenter.c  segmenter.h  segmon.c  segmon.cfg
